# qecsim

./: .gitignore  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  logging_qecsim.ini  setup.cfg  setup.py  todo.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
clib/blossom5-v2.05.pyw/: Makefile-pyw  README-PYW.rst  pypm.cpp  pypm_example.py
demos/: demo_basic.ipynb  demo_basic_plot.ipynb  demo_color666.ipynb  demo_color666_plot.ipynb  demo_linear.ipynb  demo_linear_plot.ipynb  demo_planar.ipynb  demo_planar_correlated.ipynb  demo_planar_plot.ipynb  demo_rotatedplanar.ipynb  demo_rotatedplanar_plot.ipynb  demo_toric.ipynb  demo_toric_plot.ipynb  qsu.ipynb
docs/: acknowledgment.rst  api.rst  citing.rst  conf.py  demos.rst  index.rst  installation.rst  links.rst  overview.rst  usage.rst
docs/_templates/: layout.html
docs/api/: app.rst  cli.rst  error.rst  graphtools.rst  model.rst  paulitools.rst  tensortools.rst  util.rst
docs/api/models/: basic.rst  color.rst  generic.rst  planar.rst  rotatedplanar.rst  rotatedtoric.rst  toric.rst
docs/demos/: demo_basic.rst  demo_basic_plot.rst  demo_color666.rst  demo_color666_plot.rst  demo_planar.rst  demo_planar_correlated.rst  demo_planar_plot.rst  demo_rotatedplanar.rst  demo_rotatedplanar_plot.rst  demo_toric.rst  demo_toric_plot.rst
docs/installation/: logging_qecsim.ini
qecsim/: __init__.py  cli.py  model.py  paulitools.py
qecsim/models/: basic.py  linear.py
qecsim/models/generic/: __init__.py  _naivedecoder.py  _simpleerrormodel.py
src/qecsim/: __init__.py  __main__.py  app.py  cli.py  error.py  model.py  paulitools.py  util.py
src/qecsim/graphtools/: __init__.py  blossom5.py
src/qecsim/models/: basic.py
src/qecsim/models/color/: __init__.py  _color666code.py  _color666mpsdecoder.py  _color666pauli.py
src/qecsim/models/generic/: __init__.py  _biasederrormodel.py  _fileerrormodel.py  _naivedecoder.py  _simpleerrormodel.py  _sliceerrormodel.py
src/qecsim/models/planar/: __init__.py  _planarcmwpmdecoder.py  _planarcode.py  _planarmpsdecoder.py  _planarmwpmdecoder.py  _planarpauli.py  _planarrmpsdecoder.py  _planarydecoder.py
src/qecsim/models/rotatedplanar/: __init__.py  _rotatedplanarcode.py  _rotatedplanarmpsdecoder.py  _rotatedplanarpauli.py  _rotatedplanarrmpsdecoder.py  _rotatedplanarsmwpmdecoder.py
src/qecsim/models/rotatedtoric/: __init__.py  _rotatedtoriccode.py  _rotatedtoricpauli.py  _rotatedtoricsmwpmdecoder.py
src/qecsim/models/toric/: __init__.py  _toriccode.py  _toricmwpmdecoder.py  _toricpauli.py
src/qecsim/tensortools/: __init__.py  mps.py  mps2d.py  tsr.py
tests/core/: test_app.py  test_cli.py  test_graphtools.py  test_graphtools_blossom5.py  test_model.py  test_paulitools.py  test_tensortools.py  test_util.py
tests/models/: test_basic.py  test_color666_code.py  test_color666_mps_decoder.py  test_color666_pauli.py  test_generic_biased_error_model.py  test_generic_file_error_model.py  test_generic_naive_decoder.py  test_generic_simple_error_model.py  test_generic_slice_error_model.py  test_planar_cmwpm_decoder.py  test_planar_code.py  test_planar_mps_decoder.py  test_planar_mwpm_decoder.py  test_planar_pauli.py  test_planar_rmps_decoder.py  test_planar_y_decoder.py  test_rotatedplanar_code.py  test_rotatedplanar_mps_decoder.py  test_rotatedplanar_pauli.py  test_rotatedplanar_rmps_decoder.py  test_rotatedplanar_smwpm_decoder.py  test_rotatedtoric_code.py  test_rotatedtoric_pauli.py  test_rotatedtoric_smwpm_decoder.py  test_toric_code.py  test_toric_mwpm_decoder.py  test_toric_pauli.py
tests/models/test_generic_file_error_model_files/: fivequbitcode-errors-p0.4-bias10.jsonl  header_lines_after_body_lines.json  incorrect_length_in_packed_error.json  incorrect_length_in_packed_error2.json  invalid-extra-header-1.jsonl  invalid-extra-header-2.jsonl  invalid-extra-header-3.jsonl  invalid-extra-header-4.jsonl  invalid_line1.json  invalid_line2.jsonl  invalid_line3.jsonl  invalid_structure1.jsonl  invalid_structure2.json  no_label_in_header.jsonl  no_more_errors_available.json  no_prob_in_header.jsonl  no_probability_distribution.jsonl  repeated_dic_key.json  rotated_planar_code_size_5_J_0.1_p_2.jsonl  rotated_planar_code_size_5_J_0.1_p_4.json  rotated_planar_code_size_5_J_0.1_p_6.jsonl
