[metadata]
name = qecsim
version = attr: qecsim.__version__

[options]
python_requires = >= 3
packages = find:
package_dir = = src
include_package_data = true
install_requires =
    click
    numpy

;[options.packages.find]
;where = src

[options.entry_points]
console_scripts =
    qecsim = qecsim.cli:cli
qecsim.cli.run.codes =
    five_qubit = qecsim.models.basic:FiveQubitCode
    steane = qecsim.models.basic:SteaneCode
qecsim.cli.run.error_models =
    generic.depolarizing = qecsim.models.generic:DepolarizingErrorModel
    generic.bit_flip = qecsim.models.generic:BitFlipErrorModel
    generic.phase_flip = qecsim.models.generic:PhaseFlipErrorModel
    generic.bit_phase_flip = qecsim.models.generic:BitPhaseFlipErrorModel
qecsim.cli.run.decoders =
    generic.naive = qecsim.models.generic:NaiveDecoder
qecsim.cli.run_ftp.codes =
qecsim.cli.run_ftp.error_models =
    generic.depolarizing = qecsim.models.generic:DepolarizingErrorModel
    generic.bit_flip = qecsim.models.generic:BitFlipErrorModel
    generic.phase_flip = qecsim.models.generic:PhaseFlipErrorModel
    generic.bit_phase_flip = qecsim.models.generic:BitPhaseFlipErrorModel
qecsim.cli.run_ftp.decoders =
