[metadata]
name = qecsim
version = attr: qecsim.__version__
author = David K. Tuckett
author_email = qecsim@gmail.com
description = Quantum error correction simulator
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/qecsim/qecsim
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
project_urls =
    Source Code = https://github.com/qecsim/qecsim
    Documentation = https://davidtuckett.com/qit/qecsim/
    Issue tracker = https://github.com/qecsim/qecsim/issues

[options]
python_requires = >= 3.5
packages = find:
package_dir = = src
install_requires =
    click>=7
    numpy>=1.17
    scipy>=1.3
    networkx>=2.1
    mpmath>=1

[options.packages.find]
where = src

[options.extras_require]
# $ pip install -e .[dev]
dev =
    tox
    pytest

[options.entry_points]
console_scripts =
    qecsim = qecsim.cli:cli
qecsim.cli.run.codes =
    color666 = qecsim.models.color:Color666Code
    five_qubit = qecsim.models.basic:FiveQubitCode
    planar = qecsim.models.planar:PlanarCode
    rotated_planar = qecsim.models.rotatedplanar:RotatedPlanarCode
    rotated_toric = qecsim.models.rotatedtoric:RotatedToricCode
    steane = qecsim.models.basic:SteaneCode
    toric = qecsim.models.toric:ToricCode
qecsim.cli.run.error_models =
    generic.biased_depolarizing = qecsim.models.generic:BiasedDepolarizingErrorModel
    generic.biased_y_x = qecsim.models.generic:BiasedYXErrorModel
    generic.bit_flip = qecsim.models.generic:BitFlipErrorModel
    generic.bit_phase_flip = qecsim.models.generic:BitPhaseFlipErrorModel
    generic.center_slice = qecsim.models.generic:CenterSliceErrorModel
    generic.depolarizing = qecsim.models.generic:DepolarizingErrorModel
    generic.file = qecsim.models.generic:FileErrorModel
    generic.phase_flip = qecsim.models.generic:PhaseFlipErrorModel
qecsim.cli.run.decoders =
    color666.mps = qecsim.models.color:Color666MPSDecoder
    generic.naive = qecsim.models.generic:NaiveDecoder
    planar.cmwpm = qecsim.models.planar:PlanarCMWPMDecoder
    planar.mps = qecsim.models.planar:PlanarMPSDecoder
    planar.mwpm = qecsim.models.planar:PlanarMWPMDecoder
    planar.rmps = qecsim.models.planar:PlanarRMPSDecoder
    planar.y = qecsim.models.planar:PlanarYDecoder
    rotated_planar.mps = qecsim.models.rotatedplanar:RotatedPlanarMPSDecoder
    rotated_planar.rmps = qecsim.models.rotatedplanar:RotatedPlanarRMPSDecoder
    rotated_planar.smwpm = qecsim.models.rotatedplanar:RotatedPlanarSMWPMDecoder
    rotated_toric.smwpm = qecsim.models.rotatedtoric:RotatedToricSMWPMDecoder
    toric.mwpm = qecsim.models.toric:ToricMWPMDecoder
qecsim.cli.run_ftp.codes =
    rotated_planar = qecsim.models.rotatedplanar:RotatedPlanarCode
    rotated_toric = qecsim.models.rotatedtoric:RotatedToricCode
qecsim.cli.run_ftp.error_models =
    generic.biased_depolarizing = qecsim.models.generic:BiasedDepolarizingErrorModel
    generic.biased_y_x = qecsim.models.generic:BiasedYXErrorModel
    generic.bit_flip = qecsim.models.generic:BitFlipErrorModel
    generic.bit_phase_flip = qecsim.models.generic:BitPhaseFlipErrorModel
    generic.center_slice = qecsim.models.generic:CenterSliceErrorModel
    generic.depolarizing = qecsim.models.generic:DepolarizingErrorModel
    generic.phase_flip = qecsim.models.generic:PhaseFlipErrorModel
qecsim.cli.run_ftp.decoders =
    rotated_planar.smwpm = qecsim.models.rotatedplanar:RotatedPlanarSMWPMDecoder
    rotated_toric.smwpm = qecsim.models.rotatedtoric:RotatedToricSMWPMDecoder
